[project]
name = "slack-clacks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Neeraj Kashyap", email = "nkashy1@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "cryptography>=44.0.0",
    "platformdirs>=4.5.0",
    "slack-sdk>=3.38.0",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
clacks = "slack_clacks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
]
