[project]
name = "slack-clacks"
version = "0.1.0"
description = "Control Slack from your command line"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Neeraj Kashyap", email = "nkashy1@gmail.com" }
]
requires-python = ">=3.13"
keywords = ["slack", "cli", "command-line", "messaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Utilities",
]
dependencies = [
    "alembic>=1.17.2",
    "cryptography>=44.0.0",
    "platformdirs>=4.5.0",
    "slack-sdk>=3.38.0",
    "sqlalchemy>=2.0.44",
]

[project.urls]
Homepage = "https://github.com/zomglings/clacks"
Repository = "https://github.com/zomglings/clacks"
Issues = "https://github.com/zomglings/clacks/issues"

[project.scripts]
clacks = "slack_clacks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "TID252", # ban relative imports
]

[tool.ruff.lint.isort]
known-first-party = ["slack_clacks"]
